--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 <body>
   <img src="111.png" alt="Banner Giveaway" class="banner" />
 
-  <a href="https://psce.pw/86yz57" class="button btn-red">🎁 Gabung Sekarang</a>
-  <a href="https://psce.pw/86yz57" class="button btn-green" style="font-size:1.1rem;">🔥 Buat Akun Gacor Disini</a>
-  <a href="https://psce.pw/86yz57" class="button btn-blue" style="font-size:1rem;">⭐ ID VIP Free</a>
+  <a href="https://psce.pw/87ywpb" class="button btn-red">🎁 Gabung Sekarang</a>
+  <a href="https://psce.pw/87ywpb" class="button btn-green" style="font-size:1.1rem;">🔥 Buat Akun Gacor Disini</a>
+  <a href="https://psce.pw/87ywpb" class="button btn-blue" style="font-size:1rem;">⭐ ID VIP Free</a>
 
   <h1>🎉 GIVEAWAY 100K MEMBER BARU 🎉</h1>
   <h2>Bonus Spesial Hanya Untuk 10 Pendaftar Setiap Hari!</h2>
